Add gunicorn to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
-Flask
-flask-login
-flask-bcrypt
-python-dotenv
-requests
-pymysql
-sendgrid
-itsdangerous
+aiodns==3.2.0
+aiosmtpd==1.4.6
+atpublic==5.0
+attrs==25.3.0
+bcrypt==4.3.0
+blinker==1.8.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==2.1.5
+packaging==25.0
+pycares==4.4.0
+pycparser==2.22
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+python-http-client==3.3.7
+requests==2.32.3
+sendgrid==6.12.0
+SQLAlchemy==2.0.40
+starkbank-ecdsa==2.2.0
+typing_extensions==4.13.2
+urllib3==2.2.3
+verify-email==2.4.3
+Werkzeug==3.0.6
+zipp==3.20.2
