--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==2.1.5
 packaging==25.0
+psycopg2-binary==2.9.10
 pycares==4.4.0
 pycparser==2.22
 PyMySQL==1.1.1
